--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0",
         "yiisoft/yii2-jui": "~2.0.0",
         "kartik-v/yii2-widget-rating": "*",
-        "fxp/composer-asset-plugin": "^1.3"
+        "fxp/composer-asset-plugin": "^1.3",
+        "ext-gd": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
